[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MainMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SettingsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=3]

[node name="Game Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Main" parent="." instance=ExtResource( 1 )]

[node name="settings" parent="." instance=ExtResource( 2 )]

[connection signal="play_pressed" from="Main" to="." method="_on_Main_play_pressed"]
[connection signal="setting_pressed" from="Main" to="." method="_on_Main_setting_pressed"]
[connection signal="back_button" from="settings" to="." method="_on_settings_back_button"]
